# sph-framework

./:   .pub  LICENSE  README.md  pyproject.toml  simon  simon.pub
scenes/examples/: dam_break_2d.json  dam_break_2d_h005.json  dam_break_2d_h045.json  dam_break_2d_pcisph.json  dam_break_2d_pcisph_h0045.json  dam_break_2d_pcisph_h0045_clamp.json  dam_break_2d_pcisph_h0045_clamp_bl4.json  dam_break_2d_pcisph_h0045_clamp_bl5.json  dam_break_2d_pcisph_h0050.json  dam_break_2d_pcisph_tuned.json
src/sph/core/: bootstrap.py  diagnostics.py  simulator.py  state.py  state_builder.py
src/sph/io/: csv_export.py  vtk_export.py
src/sph/neighbors/: spatial_hash.py
src/sph/solver/: pcisph.py
src/sph/sph/: density.py  kernels.py  pressure.py  viscosity.py  xsph.py
tests/: test_boundary_static.py  test_density.py  test_kernel.py  test_kernel_grad.py  test_neighbors.py  test_sim_step.py
