[project]
name = "sph-framework"
version = "0.1.0"
description = "Modular SPH simulation framework in Python"
requires-python = ">=3.10"
dependencies = [
  "numpy",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sph*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
